--- a/push/index.html
+++ b/push/index.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
   <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
   <link rel="stylesheet" href="styles/index.css">
-</head>
+<script></script>
+  </head>
 
 <body>
 
