--- a/indexn.htm
+++ b/indexn.htm
@@ -22,11 +22,11 @@ if(typeof(Notification) != "undefined") Notification.requestPermission();
 var warnWetter = function(a) {}
 warnWetter.loadWarnings = function(a) { 
 b=location.search.slice(1)||8097610000  //Augsburg   ?108111000
-a=a.warnings[b]
-if(a) new Notification(" warning",{tag:"1"})  //
+a=a.warnings[b]; var c=a
 a=a||"no warning"
 document.getElementById("warn").innerHTML=JSON.stringify(a)
 document.getElementById("warn").title=new Date(a[0].start).toTimeString()+" - "+new Date(a[0].end).toTimeString()
+if(c) new Notification(" warning",{tag:"1"})  // not chrome android!
   }
 function update() {
 var script = document.createElement('script');
