--- a/indexm.htm
+++ b/indexm.htm
@@ -24,7 +24,7 @@ function showNotification(tx) {
     if (result === 'granted') {
       navigator.serviceWorker.ready.then(function(registration) {
         registration.showNotification('Vibration Sample', {
-          body: 'Buzz! '+tx,  //Buzz!
+          body: 'Buzz! '+new Date(tx).toTimeString(),  //Buzz!
           icon: '../images/touch/chrome-touch-icon-192x192.png',
           vibrate: [200, 100, 200, 100, 200, 100, 200],
           tag: 'vibration-sample'
