--- a/index.html
+++ b/index.html
@@ -37,13 +37,16 @@ if(typeof(Notification) != "undefined") Notification.requestPermission();  //
 var warnWetter = function(a) {}
 warnWetter.loadWarnings = function(a) { 
 b=location.search.slice(1)||8097610000  //Augsburg   ?108111000
+if(1*b) {
 a=a.warnings[b]; var c=a
 a=a||"no warning"
 document.getElementById("warn").innerHTML=JSON.stringify(a)
 //document.getElementById("warn").title=new Date(a[0].start).toTimeString()+" - "+new Date(a[0].end).toTimeString()
 //if(c) new Notification(" warning",{tag:"1"})  // not chrome android!
-if(c) showNotification(a[0].start)
+if(c) showNotification(a[0].start) }
+else console.log("todo")
   }
+
 function update() {
 var script = document.createElement('script');
 script.src = "https://www.dwd.de/DWD/warnungen/warnapp/json/warnings.json"
