--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ else { // ?Ulm
     if (a.warnings[x][0].regionName.match(b)) {
       document.getElementById("warn").innerHTML = JSON.stringify(a.warnings[x])
       showNotification(a.warnings[x][0].start)
-      document.getElementById("warn").title="last update: "+new Date(a.time).toTimeString()	
+      document.getElementById("warn").title="last update: "+new Date(a.time).toTimeString()
+      console.log(a.warnings[x].length+" warnings")
     }
   }
 }
