--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+	<meta charset="UTF-8">
 	<title>DWD</title>
   <meta name="author" content="DJ">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
