--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="mobile-web-app-capable" content="yes">
 	<link rel="icon" sizes="128x128" href="pics/icon.png">
+	<meta name="theme-color" content="#5ac1f2">
 	<link rel="manifest" href="dwd.manifest">
 
 <style>
