--- a/new/index.html
+++ b/new/index.html
@@ -27,7 +27,7 @@ Anregungen zur Nutzung oder beispielhafte Weiterentwicklungen nehmen wir gerne u
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.css" crossorigin=""/>
 
     <!-- jquery für ajax-Anfragen -->
-	<script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<!-- <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script> -->
 	
 	<!-- BetterWMS stellt vereinfachte getFeatureInfo-Abfragen für WMS-Layer bereit; alternativ kann z.B. https://github.com/heigeo/leaflet.wms oder eigener Code verwendet werden
 	Die Funktionen wurden angepasst, um JSONP-Anfragen durchzuführen und ausgewählte Elemente der Feature-Info im Popup darzustellen; Änderungen sind in leaflet-betterwms.js entsprechen markiert
