--- a/new/index.html
+++ b/new/index.html
@@ -44,8 +44,8 @@ Anregungen zur Nutzung oder beispielhafte Weiterentwicklungen nehmen wir gerne u
 <script>
 
 
-	// OSM-Hintergrundslayer definieren
-	var osmlayer =  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {  //http:
+	// OSM-Hintergrundslayer definieren  //http:
+	var osmlayer =  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		attribution: 'Map data: &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors',
 		maxZoom: 18
 	});
