--- a/new/index.html
+++ b/new/index.html
@@ -21,6 +21,7 @@ Anregungen zur Nutzung oder beispielhafte Weiterentwicklungen nehmen wir gerne u
 <head>
 	<title>DWD - Warnmodul 2</title>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Leaflet JavaScript Bibliothek für interaktive Karten -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.js" crossorigin=""></script>
