--- a/new/index.html
+++ b/new/index.html
@@ -39,7 +39,7 @@ Anregungen zur Nutzung oder beispielhafte Weiterentwicklungen nehmen wir gerne u
 <body>
 
 <!-- hier wird der Kartencontainer definiert, in welchem anschließend die Karte dargestellt wird -->
-<div id="kartencontainer" style="width: 800px; height: 600px;"></div>
+<div id="kartencontainer" style="width: 98vw; height: 100vh;"></div>  <!-- width: 800px; height: 600px; -->
 
 
 <script>
