--- a/new/index.html
+++ b/new/index.html
@@ -129,7 +129,7 @@ var bg=48.37, lg=10.89  //Breiten- und Längengrad für Augsburg
 	var marker = L.marker([bg, lg]).addTo(karte);
 	marker.bindPopup("<b>Deutscher Wetterdienst</b><br>Wetter und Klima aus einer Hand").openPopup();
 //}   //Ende start
-karte.locate({setView: true, maxZoom: 16});  //Standortabfrage mit Leaflet
+karte.locate({setView: true, maxZoom: 8});  //Standortabfrage mit Leaflet  //maxZoom: 16
 </script>
 
 </body>
