--- a/new/index.html
+++ b/new/index.html
@@ -130,6 +130,7 @@ var bg=48.37, lg=10.89  //Breiten- und Längengrad für Augsburg
 	marker.bindPopup("<b>Deutscher Wetterdienst</b><br>Wetter und Klima aus einer Hand").openPopup();
 //}   //Ende start
 karte.locate({setView: true, maxZoom: 8});  //Standortabfrage mit Leaflet  //maxZoom: 16
+setInterval(function(){warnlayer.redraw()}, 300000)  //alle 5 min
 </script>
 
 </body>
