--- a/new/index_wnotify.html
+++ b/new/index_wnotify.html
@@ -19,6 +19,8 @@ Anregungen zur Nutzung oder beispielhafte Weiterentwicklungen nehmen wir gerne u
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<script></script>  <!-- needed for jsonp (DJ)  -->
+	
 	<!-- Leaflet JavaScript Bibliothek für interaktive Karten -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.js" crossorigin=""></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.2.0/leaflet.css" crossorigin=""/>
