--- a/new/index_wnotify.html
+++ b/new/index_wnotify.html
@@ -18,6 +18,7 @@ Anregungen zur Nutzung oder beispielhafte Weiterentwicklungen nehmen wir gerne u
 	<title>DWD - Warnmodul 2</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/png" sizes="192x192" href="../orange.png">
 
 	<script></script>  <!-- needed for jsonp (DJ)  -->
 	
