--- a/new/index_wnotify.html
+++ b/new/index_wnotify.html
@@ -128,7 +128,7 @@ function showNotification(tx) {
       navigator.serviceWorker.ready.then(function(registration) {
         registration.showNotification('Vibration Sample', {
           body: 'Buzz! '+tx,  //Buzz!
-          icon: 'orange.png',  //../images/touch/chrome-touch-icon-192x192.png
+          icon: '../orange.png',  //../images/touch/chrome-touch-icon-192x192.png
           vibrate: [200, 100, 200, 100, 200, 100, 200],
           tag: 'vibration-sample'
         });
