--- a/new/index_wnotify.html
+++ b/new/index_wnotify.html
@@ -122,6 +122,9 @@ karte.locate({setView: true, maxZoom: 8});  //Standortabfrage mit Leaflet  //max
 	setInterval(function(){warnlayer.redraw();}, 300000)}  //alle 5 min L.TileLayer.BetterWMS.prototype.getFeatureInfoJsonp(e)
 	karte.on('locationfound', onLocationFound);
 
+	
+	navigator.serviceWorker.register('sw.js');  //needed?
+	
 function showNotification(tx) {
   Notification.requestPermission(function(result) {
     if (result === 'granted') {
