--- a/new/index_wweather.html
+++ b/new/index_wweather.html
@@ -126,6 +126,9 @@ karte.locate({setView: true, maxZoom: 8});  //Standortabfrage mit Leaflet  //max
 	function onLocationFound(e) {console.log(e.latlng); L.TileLayer.BetterWMS.prototype.getFeatureInfoJsonp(e)
 	setInterval(function(){warnlayer.redraw();}, 300000)}  //alle 5 min L.TileLayer.BetterWMS.prototype.getFeatureInfoJsonp(e)
 	karte.on('locationfound', onLocationFound);
+	
+//navigator.serviceWorker.register('sw.js');  //needed (only for desktop?)
+	
 function showNotification(tx) {
   Notification.requestPermission(function(result) {
     if (result === 'granted') {
