--- a/new/index_wweather.html
+++ b/new/index_wweather.html
@@ -91,7 +91,16 @@ var OpenWeatherMap_Clouds = L.tileLayer('https://{s}.tile.openweathermap.org/map
 	apiKey: apikey,
 	opacity: 0.5
 })
-	
+
+	var satlayer = L.tileLayer.wms("https://maps.dwd.de/geoserver/dwd/wms/", {
+		layers: 'dwd:SAT_EU_central_RGB_cloud',  //GefuehlteTemp
+		format: 'image/png',
+		styles: '',
+		transparent: true,
+		opacity: 0.6,
+		attribution: 'Satellitenbild METEOSAT (RGB) Europa Zentral: &copy; <a href="http://www.dwd.de">DWD</a>'
+	});
+
 	var bg=48.37, lg=10.89  //Breiten- und Längengrad für Augsburg
 
 	// Leaflet-Kartenobjekt im referenzierten div erstellen und initiale Optionen für Karte übergeben
@@ -113,7 +122,8 @@ var OpenWeatherMap_Clouds = L.tileLayer('https://{s}.tile.openweathermap.org/map
 			"<span title='DWD Geoserver dwd:Warnungen_Gemeinden_vereinigt'>Gemeinde vereinigt</span>": warnlayer.addTo(karte),
 			"<span title='DWD Geoserver Gemeindewarngebiete'>Warngebiete (Gemeinden)</span>": gemeindelayer,
 			"<span title='OpenWeatherMap temp'>Temperatur</span>": OpenWeatherMap_Clouds,
-			"<span title='NASAGIBS_ModisTerraSnowCover'>Snow</span>": NASAGIBS_ModisTerraSnowCover
+			"<span title='NASAGIBS_ModisTerraSnowCover'>Snow</span>": NASAGIBS_ModisTerraSnowCover,
+			"<span title='Satellitenbild METEOSAT'>Satellitenbild</span>": satlayer
 	};
 	// Layercontrol-Element erstellen und hinzufügen
     L.control.layers(baseLayers, overLayers).addTo(karte);
