--- a/new/index_wweather.html
+++ b/new/index_wweather.html
@@ -133,9 +133,9 @@ var OpenWeatherMap_Clouds = L.tileLayer('https://{s}.tile.openweathermap.org/map
 
 karte.locate({setView: true, maxZoom: 8});  //Standortabfrage mit Leaflet  //maxZoom: 16
 //setInterval(function(){warnlayer.redraw()}, 300000)  //alle 5 min
-	function onLocationFound(e) {console.log(e.latlng); L.TileLayer.BetterWMS.prototype.getFeatureInfoJsonp(e)
-	setInterval(function(){warnlayer.redraw();}, 300000)}  //alle 5 min L.TileLayer.BetterWMS.prototype.getFeatureInfoJsonp(e)
-	karte.on('locationfound', onLocationFound);
+function onLocationFound(e) {console.log(e.latlng); L.TileLayer.BetterWMS.prototype.getFeatureInfoJsonp(e)
+	setInterval(function(){warnlayer.setUrl("https://maps.dwd.de/geoserver/dwd/wms/?" + Math.random()); warnlayer.redraw();}, 300000)}  //alle 5 min L.TileLayer.BetterWMS.prototype.getFeatureInfoJsonp(e)
+karte.on('locationfound', onLocationFound);
 	
 //navigator.serviceWorker.register('sw.js');  //needed (only for desktop?)
 	
