--- a/new/index_wweather.html
+++ b/new/index_wweather.html
@@ -61,7 +61,7 @@ Anregungen zur Nutzung oder beispielhafte Weiterentwicklungen nehmen wir gerne u
 	// CQL_FILTER können benutzt werden um angezeigte Warnungen zu filtern (http://docs.geoserver.org/stable/en/user/tutorials/cql/cql_tutorial.html)
 	// Filterung kann auf Basis der verschiedenen properties der Warnungen erfolgen (bspw. EC_II, EC_GROUP, DESCRIPTION ... ) siehe https://www.dwd.de/DE/wetter/warnungen_aktuell/objekt_einbindung/einbindung_karten_geowebservice.pdf
  	// warnlayer.setParams({CQL_FILTER:"DESCRIPTION LIKE '%Sturm%'"});
-	var tmp=decodeURI(location.search.slice(1)); if(filter && isNaN(tmp)) warnlayer.setParams({CQL_FILTER:"EVENT LIKE '%"+tmp+"%'"})  //
+	var tmp=decodeURI(location.search.slice(1)); if(filter && isNaN(tmp)) warnlayer.setParams({CQL_FILTER:"EVENT IN ('"+tmp.replace(/,/g,"','")+"')"})  //
  	// Filter können zur Laufzeit, z.B. über Nutzereingaben angepasst werden
  	//delete warnlayer.wmsParams.CQL_FILTER;
  	//warnlayer.redraw();
