--- a/new/index_wweather.html
+++ b/new/index_wweather.html
@@ -42,7 +42,7 @@ Anregungen zur Nutzung oder beispielhafte Weiterentwicklungen nehmen wir gerne u
 
 
 <script>
-	var filter=false; //edit here; filter karte mit querystringparameter ?ereignis e.g. ?GLÄTTE
+	var filter=true; //edit here; filter karte mit querystringparameter ?ereignis e.g. ?GLÄTTE
 	// OSM-Hintergrundslayer definieren  //http:
 	var osmlayer =  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		attribution: 'Map data: &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors',
