--- a/new/index_wweather.html
+++ b/new/index_wweather.html
@@ -171,7 +171,7 @@ if(typeof(Notification) != "undefined") Notification.requestPermission();  //
 	L.Control.Watermark = L.Control.extend({  //image for geocode
 		onAdd: function(map) {
 			var img = L.DomUtil.create('img');
-			img.src = 'icons/geocoder.png';
+			img.src = 'icons/search.png';
 			img.style.background = 'white';  //img.style.width = '200px';
 			
 			L.DomEvent.on(img, 'click', this._geocode, this);  //handler
@@ -183,10 +183,7 @@ if(typeof(Notification) != "undefined") Notification.requestPermission();  //
 		  var q = prompt("Ort", ""); if (q) {
 		    fetch("https://nominatim.openstreetmap.org/search?q=" + q + "&format=json")
 		      .then(function(response) {
-		        response.json().then(function(data) { karte.setView({lat: data[0].lat,lng: data[0].lon})  //Bounds in GetFeatureInfo
-		          onLocationFound({latlng: {lat: data[0].lat,lng: data[0].lon}
-		          })
-		        })
+		        response.json().then(function(data) { onGeocode({lat:data[0].lat, lng:data[0].lon}) })
 		      })
 		  }
 		}
@@ -198,6 +195,7 @@ if(typeof(Notification) != "undefined") Notification.requestPermission();  //
 	}
 	
 	L.control.watermark({ position: 'bottomright' }).addTo(karte);  //map  bottomleft
+	function onGeocode(e) {karte.setView(e); onLocationFound({latlng: e })}  //Bounds in GetFeatureInfo
 
 window.onunload = function(){if(marker.getLatLng()) localStorage.LatLng=JSON.stringify(marker.getLatLng())}  //remember marker
 </script>
