--- a/new/index_womap.html
+++ b/new/index_womap.html
@@ -35,7 +35,7 @@ content += "<p>"+item.properties.EVENT
 + "</p>"
 })
 
-document.querySelector("#anzeige").innerHTML="<h2>Amtliche Warnung</h2>"+(content||"Keine Warnungen")
+document.querySelector("#anzeige").innerHTML="<h2>Amtliche Warnung</h2>"+(content||"Keine Warnungen")+"<a href='https://www.dwd.de/warnungen'>dwd.de</a>"
 }
 </script>
 
